; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/hid/extr_hid-wacom.c_wacom_set_features.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/hid/extr_hid-wacom.c_wacom_set_features.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hid_device = type { i32 (%struct.hid_device*, i32*, i32, i32)* }

@HID_FEATURE_REPORT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hid_device*)* @wacom_set_features to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wacom_set_features(%struct.hid_device* %0) #0 {
  %2 = alloca %struct.hid_device*, align 8
  %3 = alloca i32, align 4
  %4 = alloca [2 x i32], align 4
  store %struct.hid_device* %0, %struct.hid_device** %2, align 8
  %5 = getelementptr inbounds [2 x i32], [2 x i32]* %4, i64 0, i64 0
  store i32 3, i32* %5, align 4
  %6 = getelementptr inbounds [2 x i32], [2 x i32]* %4, i64 0, i64 1
  store i32 32, i32* %6, align 4
  %7 = load %struct.hid_device*, %struct.hid_device** %2, align 8
  %8 = getelementptr inbounds %struct.hid_device, %struct.hid_device* %7, i32 0, i32 0
  %9 = load i32 (%struct.hid_device*, i32*, i32, i32)*, i32 (%struct.hid_device*, i32*, i32, i32)** %8, align 8
  %10 = load %struct.hid_device*, %struct.hid_device** %2, align 8
  %11 = getelementptr inbounds [2 x i32], [2 x i32]* %4, i64 0, i64 0
  %12 = load i32, i32* @HID_FEATURE_REPORT, align 4
  %13 = call i32 %9(%struct.hid_device* %10, i32* %11, i32 2, i32 %12)
  store i32 %13, i32* %3, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
